antlr-basics/src/main/java/com/poc/chapter_04_Part01/Expr.g4
grammar Expr;

prog : statement+;
statement : expression NEWLINE
            | ID '=' expression NEWLINE
            | NEWLINE
            ;
expression : expression ('*'|'/') expression
            | expression ('+'|'-') expression
            | INT
            | ID
            | '(' expression ')';

ID : [a-zA-Z]+ ;
INT : [0-9]+ ;
NEWLINE : '\r'? '\n' ;
WS : [ \t]+ -> skip ;
